new doc  guest integrations tests, method find all and create guest
