# internal/dto/reservation_dto.go
@@ -7,11 +7,11 @@ import (
 )
 
 type FindReservationDTO struct {
-	ID uuid.UUID `json:"id"`
-	Room uuid.UUID `json:"room_id"`
-	GuestID    uuid.UUID    `json:"guest_id"`
-	Guest      *FindGuestDTO `json:"guest"`
-	CheckIn    time.Time    `json:"check_in"`
-	CheckOut   time.Time    `json:"check_out"`
-	TotalPrice float64      `json:"total_price"`
+	ID         uuid.UUID                  `json:"id"`
+	RoomID     uuid.UUID                  `json:"room_id"`
+	GuestID    uuid.UUID                  `json:"guest_id"`
+	Guest      *FindGuestInReservationDTO `json:"guest"`
+	CheckIn    time.Time                  `json:"check_in"`
+	CheckOut   time.Time                  `json:"check_out"`
+	TotalPrice float64                    `json:"total_price"`
 }
